--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,374 +2,80 @@
 layout: default
 ---
 
-<div class="container my-3">
+{%- if site.posts.size > 0 -%}
+<div class="container py-5">
   <div class="row">
+  	<style type="text/css">
+      .card {
+        border-radius: 0;
+        box-shadow: .5rem .5rem lightblue;
+        transition: .3s;
+      }
+      .card:hover {
+        background-color: #f9f9f9;
+        box-shadow: .5rem .5rem .5rem lightblue;
+        cursor: pointer;
+      }
+    </style>
+    {%- for post in site.posts limit:1 -%}
     <div class="col">
-      <div class="card mb-3">
-        <div class="row no-gutters">
-          <div class="col-lg-6">
-            <img src="https://source.unsplash.com/E-MnIT8i9So" class="card-img" alt="...">
-          </div>
-          <div class="col-lg-6">
-            <div class="card-body d-flex flex-column justify-content-between h-100 py-0">
-              <h5 class="card-subtitle mb-3 text-muted">
-                <small>30 - 10 - 2019</small>
-              </h5>
-              <h1 class="card-title">
-                What CMX Looks Like for Retail Brands
-              </h1>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a diam nisl. Integer pharetra lorem sed enim porttitor accumsan.
-              </p>
-              <p class="card-text">
-                 Etiam aliquet libero vestibulum dolor condimentum egestas. Nulla blandit leo vel ante hendrerit tincidunt. Vestibulum placerat turpis ut metus venenatis hendrerit id vel lacus. Vestibulum eu urna lorem.
-              </p>
-              <nav class="nav justify-content-between">
-                <a class="nav-link px-0 text-muted" href="#" >
-                  Jeff Boss
-                </a>
-                <a class="nav-link px-0 text-muted" href="#">
-                  <i class="far fa-bookmark"></i>
-                </a>
-              </nav>
-            </div>
-          </div>
+      <div class="card">
+        <div class="card-body">
+          <h6 class="card-subtitle text-muted mb-3">
+            {{ post.date | date: "%b %d, %Y" }}
+          </h6>
+          <h3 class="card-title">
+            <a class="text-dark" href="{{ post.url | prepend: relative_url }}">
+              {{ post.title }}
+            </a>
+          </h3>
         </div>
       </div>
     </div>
+    {%- endfor -%}
   </div>
 </div>
+{%- endif -%}
 
-<div class="container my-5">
-  <div class="row mt-4 mb-5">
+{%- if site.posts.size > 0 -%}
+<div class="container py-5">
+  <div class="row mb-5">
     <div class="col text-center">
       <h3>Latest Stories</h3>
     </div>
   </div>
   <div class="row">
+    {%- for post in site.posts offset:1 limit: 12 -%}
     <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
+      <style type="text/css">
+        .card {
+          border-radius: 0;
+          box-shadow: .5rem .5rem beige;
+          transition: .3s;
+        }
+        .card:hover {
+          background-color: #f9f9f9;
+          box-shadow: .5rem .5rem .5rem beige;
+          cursor: pointer;
+        }
+      </style>
       <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
+          <h6 class="card-subtitle text-muted mb-3">
+            {{ post.date | date: "%b %d, %Y" }}
           </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
+          <h3 class="card-title">
+            <a class="text-dark" href="{{ post.url | prepend: relative_url }}">
+              {{ post.title }}
+            </a>
+          </h3>
           <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
+            {{ post.excerpt }}
           </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
         </div>
       </div>
     </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
-      <div class="card">
-        <img src="https://source.unsplash.com/WuPHTzYf25E" class="card-img-top" alt="...">
-        <div class="card-img-overlay h-25">
-          <a class="badge badge-secondary p-2 text-uppercase" href="#">Creativity</a>
-        </div>      
-        <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-muted">
-            <small>30 - 10 - 2019</small>
-          </h6>
-          <h4 class="card-title">
-            What CMX Looks Like for Retail Brands
-          </h4>
-          <p class="card-text">
-            CMX solutions helps retail brands connect with their customers in new ways.
-          </p>
-          <nav class="nav justify-content-between">
-            <a class="nav-link px-0 text-muted" href="#" >
-              Jeff Boss
-            </a>
-            <a class="nav-link px-0 text-muted" href="#">
-              <i class="far fa-bookmark"></i>
-            </a>
-          </nav>
-        </div>
-      </div>
-    </div>
+    {%- endfor -%}
   </div>
 </div>
+{%- endif -%}
