--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,7 +54,7 @@ layout: default
             {{ post.date | date: "%b %d, %Y" }}
           </h6>
           <h3 class="card-title">
-            <a class="text-dark" href="{{ post.url | prepend: relative_url }}">
+            <a class="text-dark" href="{{ post.url | relative_url }}">
               {{ post.title }}
             </a>
           </h3>
