--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,11 +29,11 @@
         {%- for item in site.data.nav -%}
         <li class="nav-item">
           {%- if item.url == page.url -%}
-          <a class="nav-link active text-uppercase" href="{{ item.url }}">
+          <a class="nav-link active text-uppercase" href="{{ item.url | relative_url }}">
             {{ item.title }}
           </a>
           {%- else -%}
-          <a class="nav-link text-uppercase" href="{{ item.url }}">
+          <a class="nav-link text-uppercase" href="{{ item.url | relative_url }}">
             {{ item.title }}
           </a>
           {%- endif -%}
