--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,6 +49,9 @@ layout: default
     {%- for post in site.posts offset:1 limit: 12 -%}
     <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
       <div class="card">
+        {%- if post.image_id -%}
+        <img class="card-img" src="https://source.unsplash.com/{{ post.image_id }}">
+        {%- endif -%}
         <div class="card-body">
           <h6 class="card-subtitle text-muted mb-3">
             {{ post.date | date: "%b %d, %Y" }}
