--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@ layout: default
     <div class="col-md-6 col-lg-4 col-xl-3 mb-4">
       <div class="card">
         {%- if post.image_id -%}
-        <img class="card-img" src="https://source.unsplash.com/{{ post.image_id }}">
+        <img class="card-img round-0" src="https://source.unsplash.com/{{ post.image_id }}">
         {%- endif -%}
         <div class="card-body">
           <h6 class="card-subtitle text-muted mb-3">
