--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
   }
   .card-img-placeholder {
     width: 100%;
-    height: 20vh;
+    height: 30vh;
     max-height: 250px;
     background-color: pink;
   }
@@ -58,7 +58,7 @@ layout: default
         {%- if post.image_id -%}
         <img class="card-img rounded-0" src="https://source.unsplash.com/{{ post.image_id }}">
         {%- else -%}
-        <img class="card-img card-img-placeholder">
+        <img class="card-img rounded-0 card-img-placeholder">
         {%- endif -%}
         <div class="card-body">
           <h6 class="card-subtitle text-muted mb-3">
