--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
     box-shadow: .5rem .5rem .5rem lightblue;
     cursor: pointer;
   }
-  .card-img-placeholder {
+  .card-img {
     width: 100%;
     height: 30vh;
     max-height: 250px;
@@ -58,7 +58,7 @@ layout: default
         {%- if post.image_id -%}
         <img class="card-img rounded-0" src="https://source.unsplash.com/{{ post.image_id }}">
         {%- else -%}
-        <img class="card-img rounded-0 card-img-placeholder">
+        <img class="card-img rounded-0">
         {%- endif -%}
         <div class="card-body">
           <h6 class="card-subtitle text-muted mb-3">
