--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
         .img-placeholder {
           width: 100%;
           height: 70vh;
+          max-height: 500px;
           background-image: url('https://source.unsplash.com/{{ page.image_id }}');
           background-color: beige;
           background-size: 50% no-repeat;
